# otodom_tg_bot_rust

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  urls_to_scrap.txt
.github/workflows/: docker-image.yml
migrations/2022-07-22-183631_create_tg_bot_db/: down.sql  up.sql
src/: commands.rs  lib.rs  main.rs  models.rs
src/lib/: lib.rs  models.rs  schema.rs
src/scrapper/: mod.rs  otodom_scrapper.rs
