[package]
name = "tg_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.0", features = ["full"] }
thirtyfour = "0.29.6"
diesel = { version = "1.4.4", features = ["sqlite", "chrono"] }
dotenv = "0.15.0"
chrono = "0.4"
